feat(issue-0000): add validation
